# comfy-quants

./: 2026-05-11-comfyui-offline-quantization-research-brief.md  2026-05-18-qwen-image-cli-first-offline-quantization-task-brief.md  README.md  pyproject.toml
configs/: flux2_fp8.yaml  flux2_fp8_e5m2.yaml  flux2_fp8_mixed.yaml  flux2_mxfp8.yaml  flux2_mxfp8_mixed.yaml  flux2_nvfp4.yaml  flux2_nvfp4_mixed.yaml  flux_fp8.yaml  flux_fp8_e5m2.yaml  flux_mxfp8.yaml  flux_nvfp4.yaml  ideogram4_fp8.yaml  ideogram4_fp8_e5m2.yaml  ideogram4_mxfp8.yaml  ideogram4_nvfp4.yaml  ltxv_fp8.yaml  ltxv_fp8_e5m2.yaml  ltxv_mxfp8.yaml  ltxv_nvfp4.yaml
docs/: README.md  architecture.md  cli.md  int4_full_pipeline.md  int4_runtime_oracle_notes.md  int4_svdquant_runtime_contract.md  qwen_image_edit_2511_int4_comfy_quants.md
docs/formats/: awq_w4a16.md  fp8.md  svdquant_w4a4_kitchen_tilepack.md
docs/quantization/: README.md  flux.md  flux2.md  fp8.md  ideogram4.md  int4_tools.md  ltxv.md  native_int4.md  qwen_image_edit_2511_int4.md
src/comfy_quants/: __init__.py
src/comfy_quants/backends/: deepcompressor_import.py  int4_artifact_inspect.py  qwen_image_edit_int4_pipeline.py
src/comfy_quants/cli/: commands_doctor.py  commands_export.py  commands_qwen_image_edit_int4.py  main.py
src/comfy_reduction/: __init__.py
src/genquant/: __init__.py
src/genquant/cli/: __init__.py  (+1 more)
tests/unit/: test_comfy_alignment.py  test_deepcompressor_int4_import.py  test_flux2_contract.py  test_flux_contract.py  test_ideogram4_contract.py  test_ltxv_contract.py  test_qwen_image_edit_int4_one_step_cli.py
(+16 files in other folders)
